# club-alpha

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
assets/: main.css
src/: main.rs  routes.rs  showcase.rs
src/routes/: alpine.rs  article.rs  fallback.rs  hello.rs  htmx.rs  magazine.rs
src/showcase/: greet.rs  htmx.rs
templates/: alpine.html  article.html  base.html  hello.html  htmx-edit.html  htmx.html  magazine.html
