[package]
name = "club-alpha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.20"
maud = { version = "0.25.0", features = ["axum", "axum-core"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = {version = " 1.34.0", features = ["full"]}
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
